--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,8 +55,10 @@ jobs:
         id: test-action
         uses: ./
         with:
-          milliseconds: 1000
+          category-position: ${1}
 
       - name: Print Output
         id: output
-        run: echo "${{ steps.test-action.outputs.time }}"
+        run: |
+          echo "${{ steps.test-action.outputs.discussion-id }}"
+          echo "${{ steps.test-action.outputs.discussion-url }}"
