--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "javascript-action",
-  "description": "GitHub Actions JavaScript Template",
-  "version": "0.0.0",
-  "author": "",
+  "name": "build-discussion",
+  "description": "Action to create GitHub discussions",
+  "version": "1.0.0",
+  "author": "Noelia Ruiz Martínez",
   "private": true,
-  "homepage": "https://github.com/actions/javascript-action#readme",
+  "homepage": "https://github.com/nvdaes/build-discussion#readme",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/actions/javascript-action.git"
+    "url": "git+https://github.com/nvdaes/build-discussion.git"
   },
   "bugs": {
-    "url": "https://github.com/actions/javascript-action/issues"
+    "url": "https://github.com/nvdaes/build-discussion/issues"
   },
   "keywords": [
     "GitHub",
@@ -63,7 +63,8 @@
     ]
   },
   "dependencies": {
-    "@actions/core": "^1.10.1"
+    "@actions/core": "^1.10.1",
+    "@actions/github": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.23.5",
