--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: 'Build  discussion'
+name: 'Build discussion'
 description: 'Creates a GitHub discussion'
 author: 'Noelia Ruiz Martínez'
 
@@ -31,6 +31,8 @@ outputs:
     description: 'ID of the created discussion'
   discussion-url:
     description: 'URL of the created discussion'
+  discussion-number:
+    description: 'Number of the created discussion'
 
 runs:
   using: node20
